--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <h4>Here are links to navigate what I've created:</h4>
         <a href="#" id="top">Home</a> <br>
         <a href="resume.html">Resume</a> <br>
-        <a href="../IS FINAL/startbootstrap-creative-gh-pages/index.html">Business</a>
+        <a href="startbootstrap-creative-gh-pages/index.html">Business</a>
 </body>
 </html>
