--- a/resume.html
+++ b/resume.html
@@ -13,12 +13,12 @@
     <span class="subheader">
         <a href="index.html" id="top">Home</a> |
         <a href="#">Resume</a> |
-        <a href="../IS FINAL/startbootstrap-creative-gh-pages/index.html">Business</a>
+        <a href="startbootstrap-creative-gh-pages/index.html">Business</a>
     </span>
     <br><br>
     <center><div class="name">Olivia Lundgreen</div></center>
     <br>
-    <img src="../IS FINAL/pics/liv.jpg" height="300" alt="Liv Headshot">
+    <img src="pics/liv.jpg" height="300" alt="Liv Headshot">
     <ol>
         
        <div class="header"> <li id="exp" class="resumelistheading">Work Experience</div>
